Fixed button appearance on mobile

--- a/src/app/components/add-player-form/add-player-form.component.css
+++ b/src/app/components/add-player-form/add-player-form.component.css
@@ -4,4 +4,5 @@ label {
 
 .submit-btn {
   background-color: #fdaa02;
+  -webkit-appearance: none;
 }
